# skill_development

./: webscrapper_nath.py
ROOT_progressbar/: README.md  progressbar.C  progressbar.h
Webscrapper/: .~lock.data.xlsx#  data.xlsx  raw.txt  webscrapper_nath.py  webscrapper_nath_perbook.py  webscrapper_nath_perpage.py
Webscrapper/old/: output.xlsx  page_html_fullcode.txt  page_html_soupcode.txt  webscrapper_nath.py
crossword/: requirements.txt
crossword/assets/: README.txt
crossword/src/: crossword_generator.py  main.py
crossword/src/screens/: game_screen.kv  home_screen.kv
stock_market/: 30yr_random_day_sip.xlsx  FVstocks.py  GDP_country.py  GDPtoMCap.py  avgS&Preturn.py  btc_prices.xlsx  calculate_fair_price.py  dynamicIndex.py  finance.py  leveragedETF.py  save_price.py  sip.py  stock_info.xlsx  stocks.py  stocks_sim.ods
stock_market/index/: config.py  convert_to_usd.py  create_index.py  create_index_sip_strategy.py  download_data.py  log.txt  strategy_config.py  strategy_dynamic_investment.py
stock_market/index/index_data/: China_index_data.csv  Germany_index_data.csv  India_index_data.csv  Japan_index_data.csv  US_index_data.csv  (+2 more)
stock_market/strategy/: 2x_index.csv  3x_index.csv  aligned_data.csv  lev_plot.py  original_index.csv  portfolio_growth_plot.py  strategy.py
stock_market/valuation/: dcf.py  valuation_log.txt
system_build/CMAKe/: CMakeLists.txt  Cmakebash.sh
system_build/CMAKe/CMAKe/tools/: CMakeLists.txt  tools.cpp  tools.h
system_build/CMAKe/executables/: CMakeLists.txt  print_hello.cpp
system_build/Make/: Makefile  blah.cpp  blah.h  main.cpp
(+115 files in other folders)
